--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".Auth.SignupActivity" />
+        <activity android:name=".Auth.ResetPasswordActivity" />
+        <activity
+            android:name=".Auth.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Auth.LoginActivity" />
-        <activity android:name=".Auth.SignupActivity" />
-        <activity android:name=".Auth.ResetPasswordActivity" />
-        <activity android:name=".Auth.LoginActivity" />
     </application>
 
 </manifest>
