--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Auth.SignupActivity" />
         <activity android:name=".Auth.ResetPasswordActivity" />
         <activity
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Chat.ChatActivity"></activity>
+        <activity android:name=".Chat.ChatActivity" />
+        <activity android:name=".SettingActivity"></activity>
     </application>
 
 </manifest>
