--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lekura.lekura">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,7 +26,8 @@
         </activity>
         <activity android:name=".Chat.ChatActivity" />
         <activity android:name=".SettingActivity" />
-        <activity android:name=".Chat.GroupChatActivity"></activity>
+        <activity android:name=".Chat.GroupChatActivity">
+        </activity>
     </application>
 
 </manifest>
