--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.firebaseui:firebase-ui-database:4.3.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth-github:4.3.1'
+    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
