--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'org.jsoup:jsoup:1.10.3'
 }
 apply plugin: 'com.google.gms.google-services'
